# ZLCompressDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/zlcompressdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/zlcompressdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/zlcompressdemo/: ExampleUnitTest.java
zlcompress/: CMakeLists.txt  build.gradle
zlcompress/src/androidTest/java/com/github/zlcompress/: ExampleInstrumentedTest.java
zlcompress/src/main/: AndroidManifest.xml
zlcompress/src/main/cpp/: com_github_zlcompress_ZLCompress.h  native-compress.cpp
zlcompress/src/main/java/: com_github_zlcompress_ZLCompress.h
zlcompress/src/main/java/com/github/zlcompress/: ZLCompress.java
zlcompress/src/main/res/values/: strings.xml
zlcompress/src/test/java/com/github/zlcompress/: ExampleUnitTest.java
